welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: an expression of type Null is ineligible for implicit conversion
  return null
         ^golomb:11: error: type mismatch;
 found   : Null(null)
 required: Int
  return null
         ^